header, hero, method, skill desktop responsive. fixed small x-overflow gap due to animation

--- a/sass/include/animations.scss
+++ b/sass/include/animations.scss
@@ -24,17 +24,6 @@
     transition-delay: 900ms;
   }
 
-  .slide-left {
-    transform: translateX(20px);
-    opacity: 0;
-    transition: transform 2s, opacity 2s;
-  }
-
-  .slide-left.show {
-    transform: translateX(0);
-    opacity: 1;
-  }
-
   .slide-right {
     transform: translateX(-20px);
     opacity: 0;
