--- a/sass/include/global.scss
+++ b/sass/include/global.scss
@@ -1,6 +1,11 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    overflow-x: hidden;
 }
 
 button, button:focus {
@@ -22,6 +27,13 @@ input, input:focus {
     padding: 12px 34px;
     border-radius: 8px;
     text-decoration: none;
+    transition: background-color 0.5s ease, transform 0.5s ease;
+}
+
+.btn:hover {
+    cursor: pointer;
+    background-color: #466d62;
+    transform: translateY(-5px);
 }
 
 .line-break {
@@ -32,4 +44,10 @@ input, input:focus {
 
 a {
     text-decoration: none;
+}
+
+@media only screen and (min-width: 900px) {
+    .line-break {
+        width: 224px;
+    }
 }
