--- a/sass/include/header.scss
+++ b/sass/include/header.scss
@@ -13,7 +13,7 @@
     position: fixed;
     background-color: $color-bg-1;
 	  top: 0;
-	  left: 0;
+	  right: 0;
     width: 100%;
     z-index: 5;
   }
@@ -53,14 +53,14 @@
     -webkit-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-	z-index: 10;
+	  z-index: 10;
   }
   
   .menu-toggle {
     justify-self: end;
     margin-right: 25px;
     display: none;
-	z-index: 10;
+	  z-index: 10;
   }
   
   .menu-toggle:hover{
@@ -112,7 +112,7 @@
       text-align: center;
       overflow: hidden;
       z-index: 5;
-	  transition: transform 0.5s ease-out;
+	    transition: transform 0.5s ease-out;
     }
     
     .navbar li {
